ubiquity (2.7.25) UNRELEASED; urgency=low

  * /apps/metacity/general/num_workspaces should be an int, not a boolean.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 31 Aug 2011 10:21:26 +0100

ubiquity (2.7.24) oneiric; urgency=low

  * Use only gtk3 in oem-config-remove-gtk (2.7.23 was also using gtk2).
  * Update the directory for the panel to search for indicators.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 30 Aug 2011 14:04:25 -0500

ubiquity (2.7.23) oneiric; urgency=low

  * Use the correct API for manipulating the finished dialog for oem-
    config-remove-gtk.

 -- Evan Dandrea <ev@ubuntu.com>  Tue, 30 Aug 2011 19:03:16 +0100

ubiquity (2.7.22) oneiric; urgency=low

  * Add back accidentally deleted build_timezone_list call.

 -- Evan Dandrea <ev@ubuntu.com>  Tue, 30 Aug 2011 18:34:51 +0100

ubiquity (2.7.21) oneiric; urgency=low

  [ Stéphane Graber ]
  * Explicitly bind "activate-link" as it seems to be the only way to actually
    catch that signal. (LP: #830895)
  * If the user didn't select a photo, just continue without configuring it.
    (LP: #836934)
  * Instead of forcing the color on all elements, only do it for elements
    where it's actually required. Fixes weird backgrounds in ComboBoxes (LP: #830923)
  * Set a maximum install size of 8GB as long as the user still has 20% of free
    space. (LP: #771401)

  [ Evan Dandrea ]
  * Set the timezone location to the default (LP: #830940).
  * Automatic update of included source packages: user-setup
    1.28ubuntu19.

 -- Evan Dandrea <ev@ubuntu.com>  Tue, 30 Aug 2011 17:16:54 +0100

ubiquity (2.7.20) oneiric; urgency=low

  * Raise permissions for writing out webcam picture. (LP: #836802)

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Mon, 29 Aug 2011 12:34:37 -0500

ubiquity (2.7.19) oneiric; urgency=low

  [ Stéphane Graber ]
  * Properly handle unicode in calls to preseed (LP: #831455)
  * Properly handle unicode for device and mountpoints name (LP: #833813)